# pigsmc

./: .gitignore  CMakeLists.txt  LICENSE  pyproject.toml
issues/: 002-build-system-setup.md  003-cpp-sweep-engine.md  004-periodic-boundary-conditions.md  005-rigid-translation-moves.md  006-bisection-translation-moves.md  007-rotational-degrees-of-freedom.md  008-chin-propagators.md  009-checkpointing.md  010-compile-physics.md  prd.md
issues/done/: 001-minimal-working-simulation.md  005-rigid-translation-moves.md  006-bisection-translation-moves.md
src/pigsmc/: __init__.py  _engine.cpp  boundaries.py  moves.py  particles.py  propagators.py  simulation.py
tests/: test_boundaries.py  test_engine.py  test_rotation.py  test_simulation.py
