[project]
name = "pigsmc"
version = "0.1.0"
description = "Path Integral Ground State Monte Carlo library"
readme = "README.md"
authors = [
    { name = "Brendan Abolins", email = "b.abolins@gmail.com" }
]
requires-python = ">=3.12"
dependencies = ["numpy>=1.26"]

[build-system]
requires = ["uv_build>=0.10.12,<0.11.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = ["pytest>=8.0"]
