[project]
name = "pigsmc"
version = "0.1.0"
description = "Path Integral Ground State Monte Carlo library"
readme = "README.md"
authors = [
    { name = "Brendan Abolins", email = "b.abolins@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
]

[build-system]
requires = ["scikit-build-core>=0.9", "pybind11>=2.12"]
build-backend = "scikit_build_core.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = ["pytest>=8.0"]
